# edr_query_parser

./: .flake8  .gitignore  README.md  edr_query_parser.py  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/: markdown-lint.yml
.github/workflows/: black.yml  code-quality.yml  code_quality.yml  codecov.yml  codeql-analysis.yml  deploy.yml  flake8.yml  format.yml  format_with_black.yml  linting.yml  markdown-lint.yml  pytest.yml  python-package.yml  sonar.yml  test.yml  wemake-python.yml
edr_query_parser/: __init__.py  edr_query_parser.py
edr_query_parser/tests/: test.py  test_edr_query_parser.py
tests/: test.py  test_edr_query_parser.py
