[metadata]
name = edr query parser
version = v4.2.2
description = Environmental data retrieval API query parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0w4n/edr_query_parser
author = r0w4n
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3),
    Operating System :: OS Independent,
    Development Status :: 5 - Production/Stable,
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = OGC, EDR, Environmental data retrieval

[options]
install_requires =
    python-dateutil>=2.8.2
    geomet>=0.3.0

python_requires = >=3.6

setup_requires =
    setuptools
    setuptools-scm>=6.0
